# fast-git-prompt

./: Cargo.toml  README.md  readme.md
src/: colors.rs  main.rs  prompt_parts.rs
src/prompt_parts/: branch_name.rs  branch_status.rs  branch_sync.rs  icon.rs  origin_icon.rs  prompt_part.rs
