[package]
name = "fast-git-prompt"
version = "0.2.0"
description = "A fast git prompt for zsh and bash."
license = "MIT"
repository = "https://github.com/MasterGordon/fast-git-prompt"
edition = "2021"

[dependencies]
git2 = "0.19.0"
serde_json = "1.0.122"
serde = { version = "1.0.205", features = ["derive"] }
regex = "1.10.6"
schemars = "0.8.21"
